--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@faker-js/faker": "^8.4.1",
     "@mui/icons-material": "^5.15.17",
     "@mui/lab": "^5.0.0-alpha.170",
-    "@mui/material": "^5.15.17",
+    "@mui/material": "^5.15.19",
     "@syncfusion/ej2-react-calendars": "^25.2.4",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
@@ -26,6 +26,7 @@
     "primereact": "^10.6.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
